2007-09-29  Brian Warner  <warner@lothar.com>

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): allow
	this to specify an errorparser. From Ted Mielczarek and the
	mozilla crew. Closes #94.

	* buildbot/changes/bonsaipoller.py (BonsaiParser): "Make
	bonsaipoller ignore funkyness in xml output for empy log
	messages", from Axel Hecht. Closes #90.
	* buildbot/test/test_bonsaipoller.py
	(TestBonsaiPoller.testMergeEmptyLogMsg): same

	* buildbot/status/tinderbox.py (TinderboxMailNotifier.buildStarted):
	respect 'builders' arg, from Ben Hearsum. Closes #89.

	* buildbot/scripts/runner.py (stop): increase the timeout from 5
	seconds to 10, to give heavily loaded machines a better chance to
	finish shutting down. Addresses (partially) #68.
	* buildbot/scripts/logwatcher.py (LogWatcher.TIMEOUT_DELAY): same,
	on startup
	* buildbot/scripts/reconfig.py (Reconfigurator.run): same
	* buildbot/scripts/startup.py (Follower._failure): update message

	* buildbot/changes/bonsaipoller.py: apply changes from the Mozilla
	team, to fix some bugs and avoid the use of blocking urlopen().
	closes #61.
	* buildbot/test/test_bonsaipoller.py: same

2007-09-28  Brian Warner  <warner@lothar.com>

	* buildbot/buildslave.py (BuildSlave): add notify_on_missing=
	argument, to send email about buildslaves which are disconnected
	for more than an hour. Closes #64.
	* buildbot/test/test_slaves.py (BuildSlave.test_mail_on_missing):
	test it
	* docs/buildbot.texinfo (When Buildslaves Go Missing): document it
	(MailNotifier): add docs for this too


	* buildbot/status/web/baseweb.py (OneBoxPerBuilder): make this page
	respect branch= queryargs, by restricting the builds displayed to
	those matching the given branch names
	* buildbot/status/web/waterfall.py (BuildTopBox): same

	* buildbot/test/test_web.py (WaterfallSteps.test_urls.FakeRequest):
	fix a test failure by adding .prepath to this fake object

	* buildbot/status/web/*: big set of changes to WebStatus, cleaning